# gen_ai_capstone_2025

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  idea.excalidraw  main.py  pyproject.toml  requirements.txt
chroma/: main.py
data/: hooli_helpdesk.csv
demos/: chroma_db_demo.py  fc_example.py  open_ai_fc.py  open_ai_fc_pydantic.py
telegram_handler/: main.py
ticket_db/: main.py
